# Metal-Learn

./: .gitignore  CMakeLists.txt  README.md
src/: main.mm
src/ch1/: CMakeLists.txt  main.cpp
src/ch10/: CMakeLists.txt  main.cpp
src/ch10/shaders/: shader.metal
src/ch10/utils/: shader.h
src/ch11/: CMakeLists.txt  main.cpp
src/ch11/shaders/: shader.metal
src/ch11/utils/: material.h  shader.cpp  shader.h
src/ch12/: CMakeLists.txt  main.cpp
src/ch12/shaders/: shader.metal
src/ch12/utils/: camera.h
src/ch13/: CMakeLists.txt  main.cpp
src/ch13/shaders/: shader.metal
src/ch13/utils/: material.h  model.cpp  model.h  texture_pool.h
src/ch14/: CMakeLists.txt  main.cpp
src/ch14/shaders/: shader.metal
src/ch14/utils/: mesh.cpp  mesh.h  model.h  shader.h
src/ch15/: CMakeLists.txt  main.cpp
src/ch15/shaders/: shader.metal
src/ch15/utils/: model.cpp  texture_pool.h
src/ch16/: CMakeLists.txt  main.cpp
src/ch16/utils/: shader.cpp  shader.h
src/ch17/: CMakeLists.txt  main.cpp
src/ch17/shaders/: screen_shader.metal  shader.metal
src/ch2/: CMakeLists.txt  main.cpp
src/ch3/: CMakeLists.txt  main.cpp
src/ch3/shaders/: shader.metal
src/ch3/utils/: mtlppimpl.cpp
src/ch4/: CMakeLists.txt  main.cpp
src/ch4/shaders/: shader.metal
src/ch5/: CMakeLists.txt  main.cpp
src/ch5/shaders/: shader.metal
src/ch6/: CMakeLists.txt
src/ch6/utils/: mtlppimpl.cpp
src/ch7/: CMakeLists.txt  main.cpp
src/ch7/shaders/: shader.metal
src/ch8/: CMakeLists.txt  main.cpp
src/ch8/shaders/: shader.metal
src/ch9/: CMakeLists.txt
src/ch9/shaders/: shader.metal
src/ch9/utils/: shader.cpp
src/misc/: glfw_adapter.mm
src/shaders/: basic.metal
